# nos3-cfs-study

.Trash-1001/files/server/sim/inc/: server_data_point.hpp
.Trash-1001/info/: Changed on the VM.txt.trashinfo  server.trashinfo
cfg/nos3_defs/: cpu1_cfe_es_startup.scr  targets.cmake
cfg/nos3_defs/tables/: to_config.c  to_lab_sub.c
components/client/: README.md
components/client/fsw/: CMakeLists.txt
components/client/fsw/mission_inc/: client_perfids.h
components/client/fsw/platform_inc/: client_msgids.h  client_platform_cfg.h
components/client/fsw/src/: client_app.c  client_app.h  client_device.c  client_device.h  client_events.h  client_msg.h  client_version.h
components/client/fsw/unit-test/: CMakeLists.txt
components/client/fsw/unit-test/coveragetest/: client_app_coveragetest_common.h  coveragetest_client_app.c
components/client/fsw/unit-test/inc/: ut_client_app.h
components/client/gsw/CLIENT/cmd_tlm/: CLIENT_CMD.txt  (+1 more)
components/client/sim/: CMakeLists.txt
components/client/sim/inc/: client_42_data_provider.hpp  client_data_point.hpp  client_data_provider.hpp  client_hardware_model.hpp
components/client/sim/src/: client_42_data_provider.cpp  client_data_point.cpp  client_data_provider.cpp  client_hardware_model.cpp
components/client/support/: CMakeLists.txt  client_checkout.c  client_checkout.h  device_cfg.h
components/server/fsw/platform_inc/: server_msgids.h
components/server/sim/src/: server_data_point.cpp
components/server/support/: CMakeLists.txt  device_cfg.h  server_checkout.c  server_checkout.h
scripts/: launch.sh
